--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,98 @@
+body {
+  background: #0000ff9c;
+}
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 30px 0px;
+
 }
+.formWrapper {
+  background: #fff;
+  padding: 10px 50px;
+  padding-bottom: 50px;
+  border-radius: 5px;
+}
+.formWrapper h1{ color:#0000ff9c;}
+form.myClass {
+  border: 1px solid #0000ff9c;
+  padding: 50px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-bottom: 16px;
+  position: relative;
+}
+.item .alert{color:red;font-size: 10px;}
+.item  input {
+  width: calc(100% - 22px);
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #0000ff9c;
+  z-index: 1;
+    background: transparent;
+}
+
+.item  input:focus-visible {
+  outline-color: blue;
+}
+form.myClass  button {
+  width: 100%;
+  padding: 10px;
+  background: #0000ff9c;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 4px;
+  border: 1px solid #0000ff9c;
+}
+form.myClass  button:hover {
+ 
+  background: #fff;
+  color: #0000ff9c;
+ 
+}
+.item input::placeholder{
+  color: transparent;
+}
+.item input:focus::placeholder{
+  color: #ccc;
+}
+span.placeSpan {
+  position: absolute;
+  top: -11px;
+  left: 8px;
+  color: #0000ff9c;
+  font-size: 14px;
+  opacity: 1;
+  transform: translateY(0) scale(0.9);
+  background: white;
+  padding: 0px 3px;
+  transition: opacity .2s, transform .2s;
+  z-index: 1;
+}
+.item input:placeholder-shown + span {
+  opacity: .8;
+  transform: translateY(1.5em) scale(1);
+  z-index: 0;
+}
+ .item input:focus + span {
+  opacity: 1;
+  transform: translateY(0) scale(0.9);
+  z-index: 3;
+}
+
+
+
+/**/
 
 .App-logo {
   height: 40vmin;
